examples/kraken-interpol/public/templates/errors/http_503.int
from errors import render
render(503, "Service Unavailable")
